[workspace]
members = [
    "packages/*",
    "contracts/token",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_stable",
    "contracts/router",
    "contracts/tokenomics/staking",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
