[package]
name = "astroport-factory"
version = "2.0.0"
authors = ["Astroport"]
edition = "2021"
description = "An Astroport factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cosmwasm-std = "1.5"
cw-storage-plus = "0.15"
cw2 = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"
protobuf = { version = "2", features = ["with-bytes"] }
itertools = "0.10"
classic-bindings = { version = "0.2.0", features = ["stargate"] }

[dev-dependencies]
cosmwasm-schema = "1.1"
astroport-token = {path = "../token"}
astroport-pair = {path = "../pair"}
cw20 = "0.15"
classic-test-tube = "0.2.1"
