[package]
name = "astroport-maker"
version = "1.0.1"
authors = ["Astroport"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.5"
cw2 = "0.15"
cw20 = "0.15"
cw-storage-plus = "0.15"
schemars = "0.8.1"
astroport = { path = "../../../packages/astroport", default-features = false }
astroport-governance = { git = "https://github.com/classic-terra/astroport-governance.git", branch = "terra_classic_invictus" }
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = "1.5"
astroport-token = {path = "../../token"}
astroport-factory = {path = "../../factory"}
astroport-pair = {path = "../../pair"}
classic-test-tube = {version = "0.2.2", git = "https://github.com/classic-terra/classic-rust.git", package = "classic-test-tube", rev = "2fa99dc4de9a250f3f9d13ee24dc82ffa12be0f1"}
astroport-escrow-fee-distributor = { git = "https://github.com/classic-terra/astroport-governance.git", branch = "main" }
